SET(LIB_NAME FlowVis)
SET(PLUGIN_HEADERS
    FlowVis.h
    FlowObject.h
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    FlowVis.cpp
    FlowObject.cpp
)

FIND_PACKAGE(FX)

IF(FX_FOUND)
    ADD_DEFINITIONS(-DWITH_FX_LIB)
    INCLUDE_DIRECTORIES(${FX_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(${LIB_NAME} ${FX_LIBRARY})
ENDIF(FX_FOUND)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})

ADD_CALVR_LIBRARIES(${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
