SET(LIB_NAME GreenLight)
SET(PLUGIN_HEADERS
    GreenLight.h
    Utility.h

    oasClient/OASSound.h
    oasClient/OASClientInterface.h
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    GreenLight.cpp
    LoadEntities.cpp
    Intersection.cpp
    Entity.cpp
    Hardware.cpp
    Power.cpp
    Utility.cpp
    SmokeSystem.cpp

    oasClient/OASClientInterface.cpp
    oasClient/OASSound.cpp
)

FIND_PACKAGE(MXML)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MXML_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${MXML_LIBRARY})

FIND_PACKAGE(OsgEarth)

INCLUDE_DIRECTORIES(${OSGEARTH_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSGEARTH_LIBRARY})

INCLUDE_DIRECTORIES(${OSGEARTHUTIL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSGEARTHUTIL_LIBRARY})

ADD_CALVR_LIBRARIES(${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)


