SET(LIB_NAME HelmsleyVolume)

FIND_PACKAGE(DCMTK REQUIRED)

SET(EXT_LIBRARIES ${OSG_LIBRARIES} ${DCMTK_LIBRARIES})

if(UNIX)
	FIND_PACKAGE(LibXml2 REQUIRED)
	SET(EXT_LIBRARIES ${EXT_LIBRARIES} ${LIBXML2_LIBRARIES})
endif(UNIX)

SET(PLUGIN_HEADERS
    VolumeGroup.h
    HelmsleyVolume.h
    ImageLoader.hpp
	MeasurementTool.h
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    HelmsleyVolume.cpp
    ImageLoader.cpp
    VolumeGroup.cpp
	MeasurementTool.cpp
)


INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${DCMTK_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${EXT_LIBRARIES})

ADD_CALVR_LIBRARIES(${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
