SET(LIB_NAME Hpwren)

SET(PLUGIN_HEADERS
    Hpwren.h
    Sensor.h
    SensorThread.h
    XmlReader.h
    SdgeReader.h
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    Hpwren.cpp
    Sensor.cpp
    SensorThread.cpp
    XmlReader.cpp
    SdgeReader.cpp
)

FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(OsgEarth REQUIRED)
SET (NETCDF_CXX "YES")
FIND_PACKAGE(NetCDF REQUIRED)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSGEARTH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${NETCDF_INCLUDES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${CURL_LIBRARY})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${NETCDF_LIBRARIES_CXX})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSGEARTH_LIBRARIES})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)

